[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stock_prediction_analysis"
version = "0.0.1"
description = "Model development to predict closing values on IBOVESPA stock"
authors = [
  { name = "Jessica B. Moura" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["stock_prediction_analysis"]
force_sort_within_sections = true
